--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- BOOTSTRAP CORE STYLE CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
     <!-- FONTAWESOME STYLE CSS -->
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="assets/css/font-awesome.min.css" rel="stylesheet" />b
     <!--ANIMATED FONTAWESOME STYLE CSS -->
     <link href="assets/css/font-awesome-animation.css" rel="stylesheet" />
     <!-- VEGAS STYLE CSS -->
@@ -48,40 +48,7 @@
         </div>
     </div>
     <!--END MAIN HEADING-->
-    <!--LEFT SLIDE MENU-->
-    <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
-        <h3>BIWAS</h3>
-        <a href="#">Call: +01-099-908-908</a>
-        <a href="#main-sec"><i class="fa fa-home fa-3x"></i>HOME</a>
-        <a href="#about-sec"><i class="fa fa-microphone fa-3x"></i>ABOUT</a>
-        <a href="#price-sec"><i class="fa fa-dollar fa-3x"></i>PRICING</a>
-        <a href="#services-sec"><i class="fa fa-rocket fa-3x"></i>SERVICES</a>
-        <a href="#contact-sec"><i class="fa fa-globe fa-3x"></i>CONTACT</a>
-    </nav>
 
-    <div class="row" id="icon-left">
-        <div class="col-md-12">
-            <i id="showLeftPush" class="fa fa-cut fa-4x faa-horizontal animated "></i>
-        </div>
-    </div>
-    <!--END LEFT SLIDE MENU-->
-
-    <!--RIGHT SLIDE MENU-->
-    <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-right" id="cbp-spmenu-s2">
-        <h3>SOCIAL</h3>
-        <a href="#">MY SOCIAL PRESENCE</a>
-        <a href="#"><i class="fa fa-facebook fa-3x"></i>Facebook</a>
-        <a href="#"><i class="fa fa-twitter fa-3x"></i>Twitter</a>
-        <a href="#"><i class="fa fa-linkedin fa-3x"></i>Linked In</a>
-        <a href="#"><i class="fa fa-google-plus fa-3x"></i>Google Plus</a>
-    </nav>
-
-    <div class="row" id="icon-right">
-        <div class="col-md-12">
-            <i id="showRightPush" class="fa fa-paperclip fa-4x "></i>
-        </div>
-    </div>
-    <!--END RIGHT SLIDE MENU-->
 
     <!--HOME SECTION-->
     <div class="container" id="home">
@@ -126,39 +93,7 @@
                 </div>
 
             </div>
-            <div class="row text-center g-pad-bottom">
-                <div class="col-md-12 ">
-                    <div class="col-md-3 col-sm-3 col-xs-6">
-                        <div class="team-member">
-                            <img src="assets/img/team/1.png" alt="">
-                            <h3><strong>ANDREWA ALEX </strong></h3>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6">
-                        <div class="team-member">
-                            <img src="assets/img/team/2.png" alt="">
-                            <h3><strong>ROMILIA JHON </strong></h3>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6">
-                        <div class="team-member">
-                            <img src="assets/img/team/3.png" alt="">
-                            <h3><strong>TINA WAY LEU </strong></h3>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6">
-                        <div class="team-member">
-                            <img src="assets/img/team/4.png" alt="">
-                            <h3><strong>JHON DEO ALEX </strong></h3>
-                        </div>
-                    </div>
-
-
-
-
-
-                </div>
-            </div>
+           
             <div class="row g-pad-bottom">
                 <div class="col-md-6">
                     <h3>Lorem ipsum  dolor sit amet</h3>
@@ -383,13 +318,9 @@
                 <div class="col-md-5 contact-cls">
                     <h2>GET IN TOUCH</h2>
                     <div>
-                        <span><i class="fa fa-home"></i>Address: New Your City</span>
+                        <span><i class="fa fa-envelope-o"></i>johndaltensales@gmail.com</span>
                         <br />
-                        <span><i class="fa fa-phone"></i>Phone: 82-230-567-899</span>
-                        <br />
-                        <span><i class="fa fa-envelope-o"></i>indo@yourdomain.com</span>
-                        <br />
-                        <span><i class="fa fa-globe"></i>www.yourdomain.com</span>
+                        <span><i class="fa fa-globe"></i>johndalten.github.io/</span>
                         <br />
                     </div>
                 </div>
