--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- BOOTSTRAP CORE STYLE CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
     <!-- FONTAWESOME STYLE CSS -->
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet" />b
+    <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
     <!--ANIMATED FONTAWESOME STYLE CSS -->
     <link href="assets/css/font-awesome-animation.css" rel="stylesheet" />
     <!-- VEGAS STYLE CSS -->
@@ -126,56 +126,16 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-12 ">
+
                     <div class="col-md-3">
                         <ul class="plan">
-                            <li class="plan-head c-b">BASIC PLAN</li>
-                            <li class="main-price">$99 only</li>
-                            <li><strong>12</strong> Accounts</li>
-                            <li><strong>52</strong> Emails</li>
-                            <li><strong>50 GB</strong> Space</li>
-                            <li><strong>Free</strong> Support</li>
-                            <li class="bottom">
-                                <a href="#" class="btn btn-danger">Read More</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <ul class="plan">
-                            <li class="plan-head">SIMPLE PLAN</li>
-                            <li class="main-price">$199 only</li>
-                            <li><strong>12</strong> Accounts</li>
-                            <li><strong>52</strong> Emails</li>
-                            <li><strong>50 GB</strong> Space</li>
-                            <li><strong>Free</strong> Support</li>
-                            <li class="bottom">
-                                <a href="#" class="btn btn-primary">Read More</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <ul class="plan">
-                            <li class="plan-head c-v">VALUE PLAN</li>
-                            <li class="main-price">$299 only</li>
-                            <li><strong>12</strong> Accounts</li>
-                            <li><strong>52</strong> Emails</li>
-                            <li><strong>50 GB</strong> Space</li>
-                            <li><strong>Free</strong> Support</li>
-                            <li class="bottom">
-                                <a href="#" class="btn btn-success">Read More</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <ul class="plan">
-                            <li class="plan-head c-a">ADVANCE PLAN</li>
-                            <li class="main-price">$399 only</li>
-                            <li><strong>12</strong> Accounts</li>
-                            <li><strong>52</strong> Emails</li>
-                            <li><strong>50 GB</strong> Space</li>
-                            <li><strong>Free</strong> Support</li>
-                            <li class="bottom">
-                                <a href="#" class="btn btn-default">Read More</a>
-                            </li>
+                            <li class="plan-head c-a">PRICING PLAN</li>
+                            <li class="main-price">Fair rates</li>
+                            <li><strong>High </strong>quality</li>
+                            <li><strong>Customer </strong>oriented</li>
+                            <li><strong>Client </strong>tailored</li>
+                            <li><strong>For specific rates, inquire via email</strong></li>
+
                         </ul>
                     </div>
 
