--- a/index.html
+++ b/index.html
@@ -48,7 +48,40 @@
         </div>
     </div>
     <!--END MAIN HEADING-->
+    <!--LEFT SLIDE MENU-------------------------------------------------->
+    <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
+        <h3>BIWAS</h3>
+        <a href="#">Call: +01-099-908-908</a>
+        <a href="#main-sec"><i class="fa fa-home fa-3x"></i>HOME</a>
+        <a href="#about-sec"><i class="fa fa-microphone fa-3x"></i>ABOUT</a>
+        <a href="#price-sec"><i class="fa fa-dollar fa-3x"></i>PRICING</a>
+        <a href="#services-sec"><i class="fa fa-rocket fa-3x"></i>SERVICES</a>
+        <a href="#contact-sec"><i class="fa fa-globe fa-3x"></i>CONTACT</a>
+    </nav>
 
+    <div class="row" id="icon-left">
+        <div class="col-md-12">
+            <i id="showLeftPush" class="fa fa-cut fa-4x faa-horizontal animated "></i>
+        </div>
+    </div>
+    <!--END LEFT SLIDE MENU-->
+
+    <!--RIGHT SLIDE MENU-->
+    <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-right" id="cbp-spmenu-s2">
+        <h3>SOCIAL</h3>
+        <a href="#">MY SOCIAL PRESENCE</a>
+        <a href="#"><i class="fa fa-facebook fa-3x"></i>Facebook</a>
+        <a href="#"><i class="fa fa-twitter fa-3x"></i>Twitter</a>
+        <a href="#"><i class="fa fa-linkedin fa-3x"></i>Linked In</a>
+        <a href="#"><i class="fa fa-google-plus fa-3x"></i>Google Plus</a>
+    </nav>
+
+    <div class="row" id="icon-right">
+        <div class="col-md-12">
+            <i id="showRightPush" class="fa fa-paperclip fa-4x "></i>
+        </div>
+    </div>
+    <!--END RIGHT SLIDE MENU-------------------------------------------------------------->
 
     <!--HOME SECTION-->
     <div class="container" id="home">
@@ -57,7 +90,6 @@
                 <span class="head-main">NOW OR NEVER</span>
                 <h2 class="head-sub-main">Lorem ipsum dolor</h2>
                 <h3 class="head-last">Lorem ipsum dolor sit ametLorem ipsum dolor sit amet</h3>
-                <a href="#about-sec" class="btn btn-danger btn-lg head-btn-one">EXPLORE AXIS</a> &nbsp;  <a href="#about-sec" class="btn btn-primary btn-lg">MODEL THEME</a>
             </div>
         </div>
     </div>
@@ -68,7 +100,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2 ">
-                    <h1><i class="fa fa-microphone faa-pulse animated  "></i>About</h1>
+                    <h1></i>About</h1>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-8 col-md-offset-2 ">
