--- a/index.html
+++ b/index.html
@@ -59,11 +59,6 @@
         <a href="#contact-sec"><i class="fa fa-globe fa-3x"></i>CONTACT</a>
     </nav>
 
-    <div class="row" id="icon-left">
-        <div class="col-md-12">
-            <i id="showLeftPush" class="fa fa-cut fa-4x faa-horizontal animated "></i>
-        </div>
-    </div>
     <!--END LEFT SLIDE MENU-->
 
     <!--RIGHT SLIDE MENU-->
@@ -76,11 +71,6 @@
         <a href="#"><i class="fa fa-google-plus fa-3x"></i>Google Plus</a>
     </nav>
 
-    <div class="row" id="icon-right">
-        <div class="col-md-12">
-            <i id="showRightPush" class="fa fa-paperclip fa-4x "></i>
-        </div>
-    </div>
     <!--END RIGHT SLIDE MENU-------------------------------------------------------------->
 
     <!--HOME SECTION-->
@@ -402,7 +392,7 @@
     <!-- SIDE MENU SCRIPTS -->
     <script src="assets/js/modernizr.custom.js"></script>
     <script src="assets/js/classie.js"></script>
-    <!-- VEGAS SLIDESHOW SCRIPTS -->
+    <!--  SLIDESHOW SCRIPTS -->
     <script src="assets/plugins/vegas/jquery.vegas.min.js"></script>
     <!-- CUSTOM SCRIPTS -->
     <script src="assets/js/custom.js"></script>
