--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <!--END MAIN HEADING-->
     <!--LEFT SLIDE MENU-------------------------------------------------->
-    <div class="row" id="icon-left">
+    <div class="row" >
         <div class="col-md-12">
             <i id="showLeftPush" class="fa fa-cut fa-4x faa-horizontal animated "></i>
         </div>
@@ -59,7 +59,7 @@
 
     <!--RIGHT SLIDE MENU-->
 
-    <div class="row" id="icon-right">
+    <div class="row" >
         <div class="col-md-12">
             <i id="showRightPush" class="fa fa-paperclip fa-4x "></i>
         </div>
