--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <!--END MAIN HEADING-->
     <!--LEFT SLIDE MENU-------------------------------------------------->
     <div class="row" >
-        <div class="col-md-12">
-
+        <div class>
+            <i id="showLeftPush" class="fa fa-cut fa-4x faa-horizontal animated "></i>
         </div>
     </div>
 
@@ -60,8 +60,8 @@
     <!--RIGHT SLIDE MENU-->
 
     <div class="row" >
-        <div class="col-md-12">
-
+        <div>
+            <i id="showRightPush" class="fa fa-paperclip fa-4x "></i>
         </div>
     </div>
 
