--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
-    <title>AWESOME BOOTSTRAP TEMPLATE - BIWAS </title>
+    <title>Dalten Dynamics</title>
     <!--REQUIRED STYLE SHEETS-->
     <!-- BOOTSTRAP CORE STYLE CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2 ">
-                    <h1 class="pad-adjust"><i class="fa fa-plus faa-pulse animated"></i>Biwas</h1>
+                    <h1 class="pad-adjust"></i>Dalten Dynamics</h1>
                 </div>
             </div>
         </div>
@@ -72,8 +72,8 @@
         <div class="row text-center">
             <div class="col-md-12">
                 <span class="head-main">NOW OR NEVER</span>
-                <h2 class="head-sub-main">Lorem ipsum dolor</h2>
-                <h3 class="head-last">Lorem ipsum dolor sit ametLorem ipsum dolor sit amet</h3>
+                <h2 class="head-sub-main">Dynamic marketing tailored for your business</h2>
+                <h3 class="head-last">Professional and high quality marketing analysis and improvement</h3>
             </div>
         </div>
     </div>
@@ -89,8 +89,7 @@
                 <div class="row text-center">
                     <div class="col-md-8 col-md-offset-2 ">
                         <h4>
-                            <strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                            <strong>Here at Dalton Dynamics, we endevour to tailor a marketing experience to your business through a range of strategies.
                             </strong>
                         </h4>
                     </div>
