--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="row text-center">
                     <div class="col-md-8 col-md-offset-2 ">
                         <h4>
-                            <strong>Here at Dalton Dynamics, we endevour to tailor a marketing experience to your business through a range of strategies.
+                            <strong>At Dalton Dynamics, we endevour to tailor a marketing experience to your business through a range of strategies.
                             </strong>
                         </h4>
                     </div>
@@ -102,35 +102,13 @@
             <div class="row text-center g-pad-bottom">
                 <div class="col-md-8 col-md-offset-2 ">
                     <h3>OUR TEAM PROFILE</h3>
-                    <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.                          
+                    <h4>Dalten Dynamics is run by John Dalten, a student located in Sydney Australia.
+                        Even though he is a student, Dalten is commited to the finest quality of work.         
                     </h4>
                 </div>
 
             </div>
            
-            <div class="row g-pad-bottom">
-                <div class="col-md-6">
-                    <h3>Lorem ipsum  dolor sit amet</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                           Lorem ipsum dolor sit amet, consectetur nec nisl odio
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                    </p>
-                </div>
-                <div class="col-md-6">
-                    <h3>Lorem ipsum  dolor sit amet</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                           Lorem ipsum dolor sit amet, consectetur nec nisl odio
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                    </p>
-                </div>
-            </div>
 
         </div>
     </section>
@@ -140,9 +118,8 @@
     <section id="price-sec">
         <div class="container">
             <div class="row text-center">
-                <div class="col-md-12 ">
-
-                    <div class="col-md-3">
+                <div class="col-md-12 text-center">
+                    <div class="col-md-3 text-center">
                         <ul class="plan">
                             <li class="plan-head c-a">PRICING PLAN</li>
                             <li class="main-price">Fair rates</li>
@@ -167,14 +144,13 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2 ">
-                    <h1><i class="fa fa-rocket faa-pulse animated  "></i>Services</h1>
+                    <h1></i>Services</h1>
 
                 </div>
                 <div class="row text-center">
                     <div class="col-md-8 col-md-offset-2 ">
                         <h4>
-                            <strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                            <strong>We offer marketing services for businesses looking to expand and grow their revenue.
                             </strong>
                         </h4>
                     </div>
@@ -189,40 +165,36 @@
                     <div class="col-md-3 ">
                         <div class="service-div">
                             <i class="fa fa-desktop fa-5x faa-vertical animated"></i>
-                            <h4>Sure Quique Menu </h4>
+                            <h4> Initial Research</h4>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                                Dalten Dynamics can conduct research on the businesses target market segment or niche to better position marketing strategies.
                             </p>
                         </div>
                     </div>
                     <div class="col-md-3 ">
                         <div class="service-div">
                             <i class="fa fa-flask fa-5x faa-ring animated"></i>
-                            <h4>100% Free Responsive </h4>
+                            <h4>100% Well-Crafted Analysis</h4>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                               Dalten Dynamics can conduct analysis on marketing funnels/current marketing strategies.
                             </p>
                         </div>
                     </div>
                     <div class="col-md-3 ">
                         <div class="service-div">
                             <i class="fa fa-plus fa-5x faa-float animated"></i>
-                            <h4>Well Documented </h4>
+                            <h4>Documented Reports</h4>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                                Dalten Dynamics can create and send detailed reports of analysis conducted on the business.
                             </p>
                         </div>
                     </div>
                     <div class="col-md-3 ">
                         <div class="service-div">
                             <i class="fa fa-credit-card fa-5x faa-shake animated"></i>
-                            <h4>Clean & Customizable </h4>
+                            <h4> Valuable Improvement</h4>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                                Dalten Dynamics can improve and create funnels, and copy to increase loyal customer bases in a business.
                             </p>
                         </div>
                     </div>
@@ -232,6 +204,7 @@
     </section>
     <!--END SERVICES SECTION-->
     <!--STATS SECTION-->
+    <!-->
     <section>
         <div class="container">
             <div class="row ">
@@ -273,13 +246,12 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2 ">
-                    <h1><i class="fa fa-globe faa-pulse animated  "></i>Contact</h1>
+                    <h1></i>Contact</h1>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-8 col-md-offset-2 ">
                         <h4>
-                            <strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                            <strong> Reach out for any questions or concerns regarding the use of Dalten Dynamic's services.
                             </strong>
                         </h4>
                     </div>
@@ -298,39 +270,6 @@
                         <span><i class="fa fa-globe"></i>johndalten.github.io/</span>
                         <br />
                     </div>
-                </div>
-                <div class="col-md-7">
-                    <h2>Lorem ipsum dolor sit amet</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.              
-                    </p>
-                    <form>
-                        <div class="row">
-                            <div class="col-md-6 col-sm-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" required="required" placeholder="Name">
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-sm-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" required="required" placeholder="Email address">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12 col-sm-12">
-                                <div class="form-group">
-                                    <textarea name="message" id="message" required="required" class="form-control" rows="3" placeholder="Message"></textarea>
-                                </div>
-                                <div class="form-group">
-                                    <button type="submit" class="btn btn-default">Submit Request</button>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
                 </div>
             </div>
         </div>
