--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </section>
     <!--END ABOUT SECTION-->
 
-    <!--PRICE SECTION-->
+    <!--PRICE SECTION--
     <section id="price-sec">
         <div class="container">
             <div class="row text-center">
@@ -276,7 +276,7 @@
     </section>
     <!--END CONTACT SECTION-->
 
-    <!-- SOCIAL STATS SECTION-->
+    <!-- SOCIAL STATS SECTION--
     <section>
         <div class="container">
             <div class="row g-pad-bottom">
@@ -311,7 +311,7 @@
 
     <!--FOOTER SECTION -->
     <div class="for-full-back color-bg-one" id="footer">
-        2014 www.yourdomain.com | All Right Reserved | Terms | Policies | Licenses 
+        
          
     </div>
     <!-- END FOOTER SECTION -->
