--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <div class="col-md-3 ">
                         <div class="service-div">
                             <i class="fa fa-flask fa-5x faa-ring animated"></i>
-                            <h4>100% Well-Crafted Analysis</h4>
+                            <h4>Well-Crafted Analysis</h4>
                             <p>
                                Dalten Dynamics can conduct analysis on marketing funnels/current marketing strategies.
                             </p>
@@ -204,7 +204,7 @@
     </section>
     <!--END SERVICES SECTION-->
     <!--STATS SECTION-->
-    <!-->
+    <!--
     <section>
         <div class="container">
             <div class="row ">
@@ -260,9 +260,9 @@
         </div>
     </section>
     <section class="for-full-back color-white " id="contact-inner">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-5 contact-cls">
+        <div class="container text-center">
+            <div class="row text-center">
+                <div class="col-md-5 contact-cls text-center">
                     <h2>GET IN TOUCH</h2>
                     <div>
                         <span><i class="fa fa-envelope-o"></i>johndaltensales@gmail.com</span>
