--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="col-md-12">
                 <span class="head-main">NOW OR NEVER</span>
                 <h2 class="head-sub-main">Dynamic marketing tailored for your business</h2>
-                <h3 class="head-last">Professional and high quality marketing analysis and improvement</h3>
+                <h3 class="head-last">Do what you do best, we will handle the marketing.</h3>
             </div>
         </div>
     </div>
@@ -182,19 +182,10 @@
                     </div>
                     <div class="col-md-3 ">
                         <div class="service-div">
-                            <i class="fa fa-plus fa-5x faa-float animated"></i>
-                            <h4>Documented Reports</h4>
-                            <p>
-                                Dalten Dynamics can create and send detailed reports of analysis conducted on the business.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 ">
-                        <div class="service-div">
                             <i class="fa fa-credit-card fa-5x faa-shake animated"></i>
                             <h4> Valuable Improvement</h4>
                             <p>
-                                Dalten Dynamics can improve and create funnels, and copy to increase loyal customer bases in a business.
+                                Dalten Dynamics can improve/create funnels and copy to increase loyal customer bases in a business.
                             </p>
                         </div>
                     </div>
