--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                 <div class="col-md-8 col-md-offset-2 ">
                     <h1 class="pad-adjust"></i>Dalten Dynamics</h1>
                 </div>
+                              <div>
+               <img src="logo.jpg" alt="Description of image" style="width: 200px; height: 200px; border-radius: 50%; object-fit: cover;">
+              </div>
             </div>
         </div>
     </div>
