--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2 ">
                     <h1 class="pad-adjust"></i>Dalten Dynamics</h1>
-                     <img src="logo.jpg" alt="Description of image" style="width: 200px; height: 200px; border-radius: 50%; object-fit: cover;">
+                     <img src="logo.jpg" alt="Description of image" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover;">
                 </div>
 
             </div>
@@ -74,8 +74,9 @@
         <div class="row text-center">
             <div class="col-md-12">
                 <span class="head-main">NOW OR NEVER</span>
-                <h2 class="head-sub-main">Dynamic marketing tailored for your business</h2>
-                <h3 class="head-last">Do what you do best, we will handle the marketing.</h3>
+                <h2 class="head-sub-main">Do what you do best, we'll handle the marketing.
+                    </h2>
+                <h3 class="head-last">Dynamic marketing tailored for your business</h3>
             </div>
         </div>
     </div>
