--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <div class="for-full-back color-bg-one" id="main-sec">
         <div class="container">
             <div class="row text-center">
-                    <h1 class=""></i>Dalten Dynamics</h1>
-                     <img src="logo.jpg" alt="Description of image" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover;">
+                    <h1 class=""></i>Dalten Dynamics  <img src="logo.jpg" alt="Description of image" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover;"></h1>
+                    
 
             </div>
         </div>
